* VampireApi 0.11.0
  - java.io.File.isAbsolute()
  - java.io.File.isHidden()
  - java.io.File.getAbsoluteFile()
  - java.io.File.toURL()
  - java.lang.System.Logger.Level
  - java.lang.Character.isAlphabetic
  - java.lang.reflect.UndeclaredThrowableException
  - java.lang.reflect.GenericSignatureFormatException
  - java.net.ContentHandlerFactory
  - java.net.ContentHandler
  - java.net.CookiePolicy in parts
  - java.net.CookieStore
  - java.lang.ref.Cleaner.Cleanable
  - java.lang.ref.PhantomReference
  - java.lang.EnumConstantNotPresentException
  - java.lang.LayerInstantiationException
  - java.lang.ReflextiveOperationException
  - java.lang.BootStrapMethodError
  - java.lang.ExceptionInInitializerError
  - java.lang.IllegalAccessError
  - java.lang.annotation.AnnotationTypeMismatchException
  - java.lang.annotation.IncompleteAnnotationException
  - java.lang.annotation.AnnotationFormatError
  - java.util.Optional in parts
  - java.lang.constant.Constable
  - java.lang.Enum
  - java.util.Arrays.asList bugfix varargs was missing
  - java.util.Arrays.copyOfRange
  - java.util.Collections.singletonList
  - java.util.Map.entry
  - java.util.Comparator do not declare equals in extension to java.lang Object
  - java.util.Objects
  - some skeleton classes in javax.script for compile a java ported programm 
* VampireApi 0.10.0
  - outsource 3rd party types
  - some litte Java 15 extensions from release notes
  - litte more refactoring
  - java.io.UncheckedIOException
  - java.net.spi.*
  - java.net.UnknownServiceException
  - java.net.SocketTimeoutException
  - java.net.ProtocolException
  - java.net.PortUnreachableException
  - java.net.NoRouteToHostException
  - java.net.HttpRetryException
  - java.net.ConnectException
  - java.lang.SystemJ.setProperty
  - java.lang.SecurityManager.checkPropertiesAccess
  + BugFixes:
    - java.util.Properties.load() 
* VampireApi 0.9.1
  - renamed
  - build on .net core platform with nuget using 
  - javax.xml.crypto package