@@ -11,12 +11,13 @@
  *  See the License for the specific language governing permissions and
  *  limitations under the License.
  *  
- *  Copyright © 2011 Sebastian Ritter
+ *  Copyright © 2011-2020 Sebastian Ritter
  */
 using System;
 
 namespace biz.ritter.javapi.lang
 {
+    [Serializable]
     public class IllegalArgumentException : RuntimeException
     {
         public IllegalArgumentException () : base (){}
