@@ -3,7 +3,10 @@
   - java.io.File.isHidden()
   - java.io.File.getAbsoluteFile()
   - java.io.File.toURL()
+  - java.nio.file.Files
+  - java.nio.file.InvalidPathException
   - java.lang.System.Logger.Level
+  - java.lang.SecurityManager.checkRead
   - java.lang.Character.isAlphabetic
   - java.lang.reflect.UndeclaredThrowableException
   - java.lang.reflect.GenericSignatureFormatException
@@ -22,6 +25,7 @@
   - java.lang.annotation.AnnotationTypeMismatchException
   - java.lang.annotation.IncompleteAnnotationException
   - java.lang.annotation.AnnotationFormatError
+  - java.lang.IllegalArgumentException serialize bug fix
   - java.util.Optional in parts
   - java.lang.constant.Constable
   - java.lang.Enum
